src/styles.scss
* {
	box-sizing: border-box;
}

.boundingBox {
	padding: 0;
	position: fixed;
	background-color: transparent;
}

.box {
	background-color: transparent;
	position: absolute;
	outline: none;
	z-index: 10;
	transform-origin: center center;

	&:hover {
		outline: 2px solid #EB4B48;
	}
}

.selected,
.boxGroup {
	background-color: transparent;
	outline: 2px solid #EB4B48 !important;
}

.boxGroup {
	position: absolute;
	background-color: transparent !important;
}

.guide {
	background: #EB4B48;
	color: #EB4B48;
	display: none;
	left: 0;
	position: absolute;
	top: 0;
	z-index: 100;
}

.active {
	display: block;
}

.xAxis {
	height: 100%;
	width: 1px;
}

.yAxis {
	height: 1px;
	width: 100%;
}

// Displaying coordinates and dimensions
.coordinates {
	font-size: 10px;
	position: absolute;
	top: -20px;
	left: 0;
	color: #EB4B48;
	font-weight: bold;
	height: 10px;
	display: flex;
	align-items: center;
	justify-content: flex-start;
}

.dimensions {
	display: flex;
	align-items: center;
	justify-content: center;
	position: absolute;
	font-size: 10px;
	font-weight: bold;
	color: #EB4B48;
}

.width {
	height: 10px;
}

// Resize Handles
.resizeCorners,
.rotateHandle {
	width: 10px;
	height: 10px;
	background-color: #FFF;
	border: 2px solid #EB4B48;
	position: absolute;
}

.resizeCorners {
	z-index: 99;
}

.resizeEdges {
	background-color: #EB4B48;
	position: absolute;
}

.resize-tr {
	top: -5px;
	right: -5px;
}

.resize-tl {
	top: -5px;
	left: -5px;
}

.resize-br {
	bottom: -5px;
	right: -5px;
}

.resize-bl {
	bottom: -5px;
	left: -5px;
}

.resize-tr, .resize-bl {
	cursor: nesw-resize;
}

.resize-tl, .resize-br {
	cursor: nwse-resize;
}

// Rotate handles

// Load the rotate icon svg and rotate it appropriately for each corner
.rotateHandle {
	width: 25px;
	height: 25px;
	z-index: 98;
	opacity: 0;
}

@svg-load rotate-tr url(./assets/rotate.svg) {
	fill: #333;
	stroke: #FFF;
	width: 15px;
	height: 15px;
}

@svg-load rotate-tl url(./assets/rotate.svg) {
	fill: #333;
	stroke: #FFF;
	width: 15px;
	height: 15px;
	transform: rotate(-90deg);
}

@svg-load rotate-br url(./assets/rotate.svg) {
	fill: #333;
	stroke: #FFF;
	width: 15px;
	height: 15px;
	transform: rotate(90deg);
}

@svg-load rotate-bl url(./assets/rotate.svg) {
	fill: #333;
	stroke: #FFF;
	width: 15px;
	height: 15px;
	transform: rotate(180deg);
}

.rotate-tr {
	top: -20px;
	right: -20px;
	cursor: svg-inline(rotate-tr) 0 0, auto;
}

.rotate-tl {
	top: -20px;
	left: -20px;
	cursor: svg-inline(rotate-tl) 0 0, auto;
}

.rotate-br {
	bottom: -20px;
	right: -20px;
	cursor: svg-inline(rotate-br) 0 0, auto;
}

.rotate-bl {
	bottom: -20px;
	left: -20px;
	cursor: svg-inline(rotate-bl) 0 0, auto;
}

